# FinanceTracker

./: CMakeLists.txt  LICENSE  README.md  build_installer.sh
packaging/: postinst  postrm
src/: main.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: Account.cpp  Account.h  Budget.cpp  Budget.h  Transaction.cpp  Transaction.h
src/ui/: AddTransactionDialog.cpp  AddTransactionDialog.h  DashboardWidget.cpp  DashboardWidget.h  MainWindow.cpp  MainWindow.h
src/utils/: CSVExporter.cpp  CSVExporter.h
tests/: test_transaction.cpp
